--- a/lqtam787.html
+++ b/lqtam787.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <a href="https://lqtam787.github.io/pepegabio/"></a>
 <html>
+    <head></head>
     <body>
         <h1>
             Name: Lai Quang Tam
