--- a/lqtam787.html
+++ b/lqtam787.html
@@ -3,17 +3,9 @@
 <html>
     <head></head>
     <body>
-        <h1>
-            Name: Lai Quang Tam
-        </h1>
-        <h2>
-            Born: 30th of April, 2003
-        </h2>
-        <h3>
-            Resident: Hanoi
-        </h3>
-        <p>
-            Bad-at-coding IT student. Born on the 28th anniversary of Vietnam reunification day and living life doing useless things such as playing games, surfing YouTube and arguing about irrelevant issues daily.
-        </p>
+        <h1>Name: Lai Quang Tam</h1>
+        <h2>Born: 30th of April, 2003</h2>
+        <h3>Resident: Hanoi</h3>
+        <p>Bad-at-coding IT student. Born on the 28th anniversary of Vietnam reunification day and living life doing useless things such as playing games, surfing YouTube and arguing about irrelevant issues every day.</p>
     </body>
 </html>
