--- a/lqtam787.html
+++ b/lqtam787.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <a href="https://lqtam787.github.io/pepegabio/"></a>
 <html>
-    <head></head>
+    <head>Lai "Pepega" Quang Tam</head>
     <body>
         <h1>Name: Lai Quang Tam</h1>
         <h2>Born: 30th of April, 2003</h2>
