--- a/lqtam787.html
+++ b/lqtam787.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<a href="https://lqtam787.github.io/pepegabio/"></a>
+<a href="https://lqtam787.github.io"></a>
 <html>
     <head>Lai "Pepega" Quang Tam</head>
     <body>
